--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 
   <div class="page__container">
 
+    <header class="header page__header">
+      <img src="./images/logo.svg" alt="Логотип проекта">
+    </header>
+
   </div>
 
   <script src="./index.js"></script>
