feat: сверстать секцию profile

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
       <img class="header__logo" src="./images/logo.svg" alt="Логотип проекта">
     </header>
 
+    <section class="profile page__profile">
+      <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="Аватар профиля">
+
+      <div class="profile__info">
+        <h1 class="profile__name">Жак-Ив Кусто</h1>
+        <p class="profile__about">Исследователь океана</p>
+        <img class="profile__edit-button" src="./images/edit-button.svg" alt="Кнопка редактирования профиля">
+      </div>
+
+      <img class="profile__add-button" src="./images/add-button.jpg" alt="Добавить карточку с фотографией">
+    </section>
+
   </div>
 
   <script src="./index.js"></script>
