--- a/index.html
+++ b/index.html
@@ -16,17 +16,19 @@
       <img class="header__logo" src="./images/logo.svg" alt="Логотип проекта">
     </header>
 
-    <section class="profile page__profile">
-      <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="Аватар профиля">
+    <main class="content page__content">
 
-      <div class="profile__info">
-        <h1 class="profile__name">Жак-Ив Кусто</h1>
-        <p class="profile__about">Исследователь океана</p>
-        <img class="profile__edit-button" src="./images/edit-button.svg" alt="Кнопка редактирования профиля">
-      </div>
+      <section class="profile page__profile">
+        <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="Аватар профиля">
+        <div class="profile__info">
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
+          <p class="profile__about">Исследователь океана</p>
+          <img class="profile__edit-button" src="./images/edit-button.svg" alt="Кнопка редактирования профиля">
+        </div>
+        <div class="add-button-wrapper"><img class="profile__add-button" src="./images/add-button.svg" alt="Добавить карточку с фотографией"></div>
+      </section>
 
-      <img class="profile__add-button" src="./images/add-button.jpg" alt="Добавить карточку с фотографией">
-    </section>
+    </main>
 
   </div>
 
