feat: Сверстать секцию cards и добавить адаптив

--- a/index.html
+++ b/index.html
@@ -23,9 +23,65 @@
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__about">Исследователь океана</p>
-          <img class="profile__edit-button" src="./images/edit-button.svg" alt="Кнопка редактирования профиля">
+          <button class="profile__edit-button"><img class="profile__edit-button-img" src="./images/edit-button.svg" alt="Кнопка редактирования профиля"></button>
         </div>
-        <div class="add-button-wrapper"><img class="profile__add-button" src="./images/add-button.svg" alt="Добавить карточку с фотографией"></div>
+        <button class="profile__add-button"><img class="profile__add-button-img" src="./images/add-button.svg" alt="Добавить карточку с фотографией"></button>
+      </section>
+
+      <section class="cards page__cards">
+
+        <ul class="cards__list">
+
+          <li class="cards__card card">
+            <img class="card__img" src="./images/Карачаевск.jpg" alt="Карачаевск">
+            <h2 class="card__title">Карачаевск</h2>
+            <button class="card__like-button">
+              <img class="card__like-button-img" src="./images/like-button.svg" alt="Кнопка 'поставить лайк'">
+            </button>
+          </li>
+
+          <li class="cards__card card">
+            <img class="card__img" src="./images/Гора-Эльбрус.jpg" alt="Гора Эльбрус">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button class="card__like-button">
+              <img class="card__like-button-img" src="./images/like-button.svg" alt="Кнопка 'поставить лайк'">
+            </button>
+          </li>
+
+          <li class="cards__card card">
+            <img class="card__img" src="./images/Домбай.jpg" alt="Домбай">
+            <h2 class="card__title">Домбай</h2>
+            <button class="card__like-button">
+              <img class="card__like-button-img" src="./images/like-button.svg" alt="Кнопка 'поставить лайк'">
+            </button>
+          </li>
+
+          <li class="cards__card card">
+            <img class="card__img" src="./images/Гора-Эльбрус.jpg" alt="Гора Эльбрус">
+            <h2 class="card__title">Гора Эльбрус</h2>
+            <button class="card__like-button">
+              <img class="card__like-button-img" src="./images/like-button.svg" alt="Кнопка 'поставить лайк'">
+            </button>
+          </li>
+
+          <li class="cards__card card">
+            <img class="card__img" src="./images/Домбай.jpg" alt="Домбай">
+            <h2 class="card__title">Домбай</h2>
+            <button class="card__like-button">
+              <img class="card__like-button-img" src="./images/like-button.svg" alt="Кнопка 'поставить лайк'">
+            </button>
+          </li>
+
+          <li class="cards__card card">
+            <img class="card__img" src="./images/Карачаевск.jpg" alt="Карачаево-Черкесия">
+            <h2 class="card__title">Карачаево-Черкесия</h2>
+            <button class="card__like-button">
+              <img class="card__like-button-img" src="./images/like-button.svg" alt="Кнопка 'поставить лайк'">
+            </button>
+          </li>
+
+        </ul>
+
       </section>
 
     </main>
