--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
 
     </main>
 
+    <footer class="footer page__footer">
+      <p class="footer__copyright">&COPY; 2022 Mesto Russia</p>
+    </footer>
   </div>
 
   <script src="./index.js"></script>
