feat: Написать скрипты для popup и кнопок

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </footer>
   </div>
 
-  <section class="popup page__popup page__popup_closed">
+  <section class="popup page__popup">
 
     <div class="popup__container">
 
