--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="Аватар профиля">
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__about">Исследователь океана</p>
+          <p class="profile__job">Исследователь океана</p>
           <button class="profile__edit-button"><img class="profile__edit-button-img" src="./images/edit-button.svg" alt="Кнопка редактирования профиля"></button>
         </div>
         <button class="profile__add-button"><img class="profile__add-button-img" src="./images/add-button.svg" alt="Добавить карточку с фотографией"></button>
@@ -98,8 +98,8 @@
       <form class="popup__form form">
         <h2 class="form__title title">Редактировать профиль</h2>
         <fieldset class="form__profile-info">
-          <input class="form__profile-owner-name form__input" placeholder="Имя" type="text" name="profile-owner-name" required>
-          <input class="form__profile-owner-occupation form__input" placeholder="О себе" type="text" name="profile-owner-occupation" required>
+          <input class="form__input-name form__input" placeholder="Имя" type="text" name="profile-owner-name" required>
+          <input class="form__input-job form__input" placeholder="О себе" type="text" name="profile-owner-occupation" required>
         </fieldset>
         <button class="form__submit-button" type="submit">Сохранить</button>
         <img class="form__close-button" src="./images/close-button.svg" alt="Закрыть форму">
