refactor: Заполнить src атрибут у card-review__img

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <div class="card-review">
 
     <div class="card-review__container">
-      <img class="card-review__img" src="" alt="">
+      <img class="card-review__img" src="'https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg'" alt="#">
       <h2 class="card-review__title"></h2>
       <button class="card-review__close-button close-button"></button>
     </div>
