refactor:  Изменить атрибуты name у элементов form

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <div class="popup__container">
 
-      <form id="profile-form" class="popup__form form" name="popup-form">
+      <form id="profile-form" class="popup__form form" name="profile-form">
         <h2 class="form__title title">Редактировать профиль</h2>
         <fieldset class="form__profile-info">
           <input id="input-name" class="form__input" placeholder="Имя" type="text" name="name" required>
@@ -69,7 +69,7 @@
   <div class="popup popup_type_add-place">
     <div class="popup__container">
 
-      <form id="add-place-form" class="popup__form form" name="popup-form">
+      <form id="add-place-form" class="popup__form form" name="add-place-form">
         <h2 class="form__title title">Новое место</h2>
         <fieldset class="form__profile-info">
           <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="name" required>
