--- a/index.html
+++ b/index.html
@@ -54,10 +54,20 @@
 
       <form id="profile-form" class="popup__form form" name="profile-form" novalidate>
         <h2 class="form__title title">Редактировать профиль</h2>
-        <fieldset class="form__profile-info">
-          <input id="input-name" class="form__input" placeholder="Имя" type="text" name="name" required minlength="2" maxlength="40">
-          <input id="input-job" class="form__input" placeholder="О себе" type="text" name="job" required minlength="2" maxlength="200">
+        <fieldset class="form__fieldset">
+
+          <label class="form__field">
+            <input id="input-name" class="form__input" placeholder="Имя" type="text" name="name" required minlength="2" maxlength="40">
+            <span class="input-name-error form__input-error"></span>
+          </label>
+
+          <label class="form__field">
+            <input id="input-job" class="form__input" placeholder="О себе" type="text" name="job" required minlength="2" maxlength="200">
+            <span class="input-job-error form__input-error"></span>
+          </label>
+
         </fieldset>
+
         <button class="form__submit-button" type="submit">Сохранить</button>
         <button class="form__close-button close-button" type="button"></button>
       </form>
@@ -71,10 +81,20 @@
 
       <form id="add-place-form" class="popup__form form" name="add-place-form" novalidate>
         <h2 class="form__title title">Новое место</h2>
-        <fieldset class="form__profile-info">
-          <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="name" required>
-          <input id="input-place-link" class="form__input" placeholder="Ссылка на картинку" type="url" name="job" required>
+        <fieldset class="form__fieldset">
+
+          <label class="form__field">
+            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="name" required minlength="2" maxlength="30">
+            <span class="input-place-name-error form__input-error"></span>
+          </label>
+
+          <label class="form__field">
+            <input id="input-place-link" class="form__input" placeholder="Ссылка на картинку" type="url" name="job" required>
+            <span class="input-place-link-error form__input-error"></span>
+          </label>
+
         </fieldset>
+
         <button class="form__submit-button" type="submit">Создать</button>
         <button class="form__close-button close-button" type="button"></button>
       </form>
