--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./pages/index.css">
   <title>Место</title>
 </head>
 
@@ -13,14 +12,14 @@
   <div class="page__container">
 
     <header class="header page__header">
-      <img class="header__logo" src="./images/logo.svg" alt="Логотип проекта">
+      <img class="header__logo" src="<%=require('../images/logo.svg')%>" alt="Логотип проекта">
     </header>
 
     <main class="content page__content">
 
       <section class="profile page__profile">
 
-        <img class="profile__avatar" src="./images/profile__avatar.jpg" alt="Аватар профиля">
+        <img class="profile__avatar" src="<%=require('../images/profile__avatar.jpg')%>" alt="Аватар профиля">
 
         <div class="profile__info">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -135,7 +134,6 @@
 
   </template>
 
-  <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
