--- a/src/index.html
+++ b/src/index.html
@@ -83,12 +83,12 @@
         <fieldset class="form__fieldset">
 
           <label class="form__field">
-            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="name" required minlength="2" maxlength="30">
+            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="place-name" required minlength="2" maxlength="30">
             <span class="input-place-name-error form__input-error"></span>
           </label>
 
           <label class="form__field">
-            <input id="input-place-link" class="form__input" placeholder="Ссылка на картинку" type="url" name="job" required>
+            <input id="input-place-link" class="form__input" placeholder="Ссылка на картинку" type="url" name="link" required>
             <span class="input-place-link-error form__input-error"></span>
           </label>
 
