feat: Настроить связь между классами в index.js

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,7 @@
         <fieldset class="form__fieldset">
 
           <label class="form__field">
-            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="place-name" required minlength="2" maxlength="30">
+            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="place" required minlength="2" maxlength="30">
             <span class="input-place-name-error form__input-error"></span>
           </label>
 
