--- a/src/index.html
+++ b/src/index.html
@@ -19,11 +19,14 @@
 
       <section class="profile page__profile">
 
-        <img class="profile__avatar" src="<%=require('./images/profile__avatar.jpg')%>" alt="Аватар профиля">
+        <div class="profile__avatar-container">
+          <div class="profile__avatar-mask"></div>
+          <img class="profile__avatar" src="" alt="Аватар профиля">
+        </div>
 
         <div class="profile__info">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__job">Исследователь океана</p>
+          <h1 class="profile__name"></h1>
+          <p class="profile__job"></p>
           <button class="profile__edit-button" type="button">
           </button>
         </div>
@@ -76,6 +79,7 @@
   </div>
 
   <div class="popup popup_type_add-place">
+
     <div class="popup__container">
 
       <form id="add-place-form" class="popup__form form" name="add-place-form" novalidate>
@@ -83,7 +87,7 @@
         <fieldset class="form__fieldset">
 
           <label class="form__field">
-            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="place" required minlength="2" maxlength="30">
+            <input id="input-place-name" class="form__input" placeholder="Название" type="text" name="name" required minlength="2" maxlength="30">
             <span class="input-place-name-error form__input-error"></span>
           </label>
 
@@ -99,6 +103,44 @@
       </form>
 
     </div>
+
+  </div>
+
+  <div class="popup popup_type_confirmation">
+
+    <div class="popup__container">
+
+      <form id="confirmation-form" class="popup__form form" name="confirmation-form" novalidate>
+        <h2 class="form__title title confirmation-title">Вы уверены?</h2>
+
+        <button class="form__submit-button confirmation-button" type="submit">Да</button>
+        <button class="form__close-button close-button" type="button"></button>
+      </form>
+    </div>
+
+  </div>
+
+  <div class="popup popup_type_update-avatar">
+
+    <div class="popup__container">
+
+      <form id="update-avatar-form" class="popup__form form" name="update-avatar-form" novalidate>
+        <h2 class="form__title title">Обновить аватар</h2>
+        <fieldset class="form__fieldset">
+
+          <label class="form__field">
+            <input id="input-avatar-link" class="form__input" placeholder="Ссылка на новый аватар" type="url" name="avatar" required>
+            <span class="input-avatar-link-error form__input-error"></span>
+          </label>
+
+        </fieldset>
+
+        <button class="form__submit-button" type="submit">Сохранить</button>
+        <button class="form__close-button close-button" type="button"></button>
+      </form>
+
+    </div>
+
   </div>
 
   <div class="popup popup_type_card-review">
@@ -107,7 +149,7 @@
 
       <img class="card-review__img" src="https://pictures.s3.yandex.net/frontend-developer/cards-compressed/baikal.jpg" alt="#">
       <h2 class="card-review__title"></h2>
-      <button class="card-review__close-button close-button"></button>
+      <button class="card-review__close-button close-button" type="button"></button>
 
     </div>
 
@@ -124,11 +166,15 @@
 
       <h2 class="card__title title"></h2>
 
-      <button class="card__like-button" type="button">
-      </button>
+      <div class="card__like-container">
 
-      <button class="card__trash-button" type="button">
-      </button>
+        <button class="card__like-button" type="button">
+        </button>
+        <p class="card__like-counter"></p>
+      </div>
+
+      <!-- <button class="card__trash-button" type="button">
+      </button> -->
 
     </li>
 
