fix: Поставить заглушку в src

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
         <div class="profile__avatar-container">
           <div class="profile__avatar-mask"></div>
-          <img class="profile__avatar" src="" alt="Аватар профиля">
+          <img class="profile__avatar" src="#" alt="Аватар профиля">
         </div>
 
         <div class="profile__info">
